--- a/styles/ourteam.css
+++ b/styles/ourteam.css
@@ -1,7 +1,7 @@
 /* Estilos específicos para la página Our Team */
 
 .team-hero {
-    background: linear-gradient(rgba(236, 249, 242, 0.9), rgba(236, 249, 242, 0.9)), url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+    background: linear-gradient(rgba(236, 249, 242, 0.9), rgba(236, 249, 242, 0.9)), url('https://i.pinimg.com/736x/2d/68/d8/2d68d8a076399c5b836e5dea4750dc01.jpg');
     background-size: cover;
     background-position: center;
 }
