--- a/styles/services-products.css
+++ b/styles/services-products.css
@@ -1,7 +1,7 @@
 /* Estilos específicos para la página Services and Products */
 
 .services-hero {
-    background: linear-gradient(rgba(236, 249, 242, 0.9), rgba(236, 249, 242, 0.9)), url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+    background: linear-gradient(rgba(236, 249, 242, 0.9), rgba(236, 249, 242, 0.9)), url('https://blog.planview.com/wp-content/uploads/2022/05/iStock-1293656833.jpg');
     background-size: cover;
     background-position: center;
 }
